style.css
body,
html {
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  overflow: hidden;
}

.content {
  padding: 20px;
  background: rgba(255, 255, 255, 0.1);
  backdrop-filter: blur(30px);
  border-radius: 10px;
  text-align: center;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  font-size: xx-large;
  font-family: Patrick Hand SC;
  color: white;
  text-shadow: 0 2px 3px black, 0 0 0.25em rgba(0, 0, 0, 0.5);
  width: 80%; /* Set a fixed width */
  max-width: 600px; /* Optional: Set a maximum width */
  margin: 0 auto; /* Center the box horizontally */
}

#language-selector {
  margin: 10px;
}

#langs-output {
  font-size: 1.2em;
}

.middle {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.topright {
  display: flex;
  align-items: center;
  padding: 2px;
  position: absolute;
  top: 1px;
  right: 1px;
  background: rgba(255, 255, 255, 0.1);
  backdrop-filter: blur(100px);
  border-bottom-left-radius: 10px;
  font-family: Noto Sans;
  color: white;
}

/* patrick-hand-sc-regular - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: "Patrick Hand SC";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/patrick-hand-sc-v15-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

/* noto-sans-regular - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: "Noto Sans";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/noto-sans-v36-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* Loading Screen Styles */
#loading-screen {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(255, 255, 255, 0.9);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}
#progress-bar-container {
  width: 80%;
  background: #e0e0e0;
  border-radius: 10px;
  overflow: hidden;
}

#progress-bar {
  width: 0;
  height: 20px;
  background: #76c7c0;
}

#progress-text {
  margin-top: 10px;
  font-size: 1.2em;
}

#countdown-timer {
  font-size: 1em;
  white-space: nowrap; /* Prevent text from wrapping */
  overflow: hidden; /* Prevent overflow */
  text-overflow: ellipsis; /* Add ellipsis if text overflows */
  margin-top: 10px; /* Add some space above the timer */
}

